@@ -1,5 +1,6 @@
 # Head
 
+- Fixed a bug in bounds checking when replacing arithmetic on ranges
 - Ruby version of RIGHT now returns a string if index out of bounds
 - Removed the special case optimisation of the COUNT function. It wasn't right in some cases
 - Now copes with passing a range where a cell expected in the CHOOSE function, but only if CHOOSE is the first function in a cell
